fixed bug that made saved recipe button text unreadable when hovered over

--- a/client/src/Styles.css
+++ b/client/src/Styles.css
@@ -272,3 +272,22 @@ h1 {
 .image:hover {
     opacity: 90%;
 }
+
+
+.save-button {
+  height: 30px;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  color:white;
+  background-color:#D80032;
+  transition: color, 0.5s;
+}
+
+
+.save-button:hover {
+  background-color:white;
+  color:#D80032;
+}
+
+
